--- a/inst/Experiment.Rmd
+++ b/inst/Experiment.Rmd
@@ -24,9 +24,9 @@ library(plot3D)
 using namespace std;
 
 // [[Rcpp::export(testcpp)]]
-Eigen::VectorXd testcpp() {
-  Eigen::VectorXd v = Eigen::VectorXd::Zero(0);
-  return (v.array()*10+1);
+void testcpp() {
+  Rcpp::List l = Rcpp::List::create();
+  cout << l.length() << endl;
 }
 ```
 
@@ -59,15 +59,36 @@ ggplot() + geom_point(aes(x,y_h))
 
 ```{r}
 time_start = Sys.time()
-a = ebars(x,y_h)
+a = ebars(x,y_h,intercept = F)
 a$mcmc()
 time_end = Sys.time()
 print(time_end-time_start)
+# Time difference of 3.260445 secs
 ```
 
 ```{r}
 a$knots()
 ```
+
+```{r}
+samples = a$samples()
+nums = sapply(samples, function(xi) {return(length(xi))})
+points = unlist(samples)
+```
+
++ histogram
+```{r}
+ggplot(mapping=aes(x=nums)) + geom_histogram(binwidth = 0.5)
+```
+```{r}
+ggplot(mapping=aes(x=nums)) + geom_bar(aes(y=after_stat(prop))) + scale_x_continuous(breaks=seq(5,10),labels=seq(5,10))
+```
+
++ density plot
+```{r}
+ggplot(mapping=aes(x=points)) + geom_density()
+```
+
 
 
 ```{r}
