--- a/inst/Experiment.Rmd
+++ b/inst/Experiment.Rmd
@@ -16,22 +16,6 @@ library(ggplot2)
 library(plot3D)
 ```
 
-```{r}
-Rcpp::sourceCpp(code='
-// [[Rcpp::depends(RcppEigen)]]
-#include <RcppEigen.h>
-#include <iostream>
-#include <algorithm>
-using namespace std;
-
-// [[Rcpp::export(testcpp)]]
-void testcpp() {
-  Rcpp::List l = Rcpp::List::create();
-  cout << l.length() << endl;
-}
-')
-```
-
 
 ```{r}
 Rcpp::sourceCpp(code='
@@ -58,7 +42,7 @@ set.seed(1234)
 knot = c(0.4,0.4,0.4,0.4,0.7)
 beta = matrix(c(3,-5,5,-3,3,-5,3,-2),ncol=1)
 # beta = matrix(c(3,-5,5,-3,3,-4),ncol=1)
-m_train = 200; m_test = 50
+m_train = 200; m_test = 200
 ```
 
 ```{r}
@@ -66,7 +50,7 @@ m_train = 200; m_test = 50
 x = c(0,sort(runif(m_train, 0, 1))[c(-1,-m_train)],1)
 B = bs(x,knots=knot,Boundary.knots=c(0,1))
 y = B%*%beta
-y_h = y + rnorm(m_train,0,0.05)
+y_h = y + rnorm(m_train,0,0.2)
 
 # generate test data set
 x_new = runif(m_test,0,1)
@@ -74,20 +58,34 @@ y_new = predict(B,x_new)%*%beta
 ```
 
 ```{r}
-ggplot() + geom_point(aes(x,y_h))
+# plot train data and true curve
+ggplot() + geom_point(aes(x,y_h)) + ylim(-5, 5) +
+  geom_line(aes(x, B%*%beta), color="blue", size=1)
 ```
 
 
 ```{r}
 time_start = Sys.time()
 a = ebars(x,y_h,intercept = FALSE)
-a$mcmc()
+a$rjmcmc(burns=2000,steps=2000)
 time_end = Sys.time()
 print(time_end-time_start)
 # Time difference of 3.260445 secs
 ```
 
 ```{r}
+# plot prediction on test set
+pred = a$predict(x_new)
+y_hat = rowMeans(pred)
+y_lower = apply(pred,1,quantile,0.025)
+y_upper = apply(pred,1,quantile,0.975)
+ggplot() + geom_point(aes(x_new,y_hat),color="red") + ylim(-5, 5) +
+  geom_ribbon(aes(x=x_new,ymin=y_lower,ymax=y_upper),alpha=0.2,fill="blue") +
+  geom_line(aes(x, B%*%beta), color="blue", size=1)
+```
+
+```{r}
+?ebars
 a$knots()
 ```
 
