--- a/README.Rmd
+++ b/README.Rmd
@@ -15,22 +15,21 @@ knitr::opts_chunk$set(
 )
 ```
 
-# EBARS
+# ABMRS
 
 <!-- badges: start -->
 
 <!-- badges: end -->
 
-The goal of EBARS is to implement the extended Bayesian adaptive regression spline algorithm of the article ***Extended Bayesian information criterion for multivariate spline knot inference***. In spline regression, the number and location of knots influence the performance and interpretability significantly. We propose a fully Bayesian approach for knot inference in multivariate spline regression. The knot inference is of interest in many problems, such as change point detection. We can estimate the knot number and location simultaneously and accurately by the proposed method in univariate or bivariate splines.
+The goal of ABMRS is to implement the adaptive Bayesian multivariate regression spline algorithm of the article ***Adaptive Bayesian Multivariate Spline Knot Inference with Prior Specifications on Model Complexity***. In spline regression, the number and location of knots influence the performance and interpretability significantly. We propose a fully Bayesian approach for knot inference in multivariate spline regression. The knot inference is of interest in many problems, such as change point detection. We can estimate the knot number and location simultaneously and accurately by the proposed method in univariate or multivariate splines.
 
 We specify a prior on the knot number to take into account the complexity of the model space and derive an analytic formula in the normal model. In the non-normal cases, we utilize the extended Bayesian information criterion (EBIC) to approximate the posterior density. The samples are simulated in the space with differing dimensions via reversible jump Markov chain Monte Carlo (RJMCMC). Experiments demonstrate the splendid capability of the algorithm, especially in function fitting with jumping discontinuity.
 
-More examples refer to [exampleEBARS](https://github.com/junhuihe2000/exampleEBARS).
+More examples refer to [exampleABMRS](https://github.com/junhuihe2000/exampleABMRS).
 
 ## Installation
 
-You can install the development version of EBARS from [GitHub](https://github.com/) with:
-
+You can install the development version of ABMRS from [GitHub](https://github.com/) with:
 ``` r
 # install.packages("devtools")
 devtools::install_github("junhuihe2000/ABMRS")
@@ -43,7 +42,7 @@ This is a basic example which shows you how to make knot inference:
 1. Generate data
 
 ```{r data, fig.dim=c(4,3), fig.dpi=1000, out.width="50%", fig.align='center'}
-library(EBARS)
+library(ABMRS)
 library(splines)
 library(ggplot2)
 library(ggpubr)
@@ -75,14 +74,14 @@ set.seed(1234)
 m = 500; sd = 0.4
 x = runif(m)
 y = f(x) + rnorm(m,0,sd)
-# EBARS
+# ABMRS
 ebars = ebars(x,y,gamma=1,c=0.3,n=1000,degree=1,intercept=TRUE)
-ebars$mcmc(burns=5000,steps=5000)
-samples = ebars$samples()
-nums = sapply(samples, function(xi) {return(length(xi))})
-points = unlist(samples)
+ebars$rjmcmc(burns=5000,steps=5000)
+knots = ebars$knots()
+nums = sapply(knots, function(xi) {return(length(xi))})
+points = unlist(knots)
 p1 = ggplot(mapping=aes(x=nums)) + geom_bar(aes(y=after_stat(prop))) + ylab("") + xlab("") + geom_vline(aes(xintercept=mean(nums)), color="red", linetype="dashed") + scale_x_continuous(breaks=seq(min(nums),max(nums)),labels=seq(min(nums),max(nums)))
 p2 = ggplot(mapping=aes(x=points)) + geom_density(adjust=1) + ylab("") + xlab("")
 
-annotate_figure(ggarrange(p1,p2,ncol=2,nrow=1,align="hv"),top="The posterior distribution of knots by EBARS")
+annotate_figure(ggarrange(p1,p2,ncol=2,nrow=1,align="hv"),top="The posterior distribution of knots by ABMRS")
 ```
